Running VAE with dif. hyperparam

--- a/code/0_Data_Exploration.ipynb
+++ b/code/0_Data_Exploration.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "'/home/ubuntu/AYP/data/labeled_data/enriched_labeled_dataset_large.json'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -3523,6 +3523,154 @@
    "source": [
     "sim_matrix_train['email'].describe()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PCA for mesh emd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: elasticsearch in /home/ubuntu/anaconda3/lib/python3.7/site-packages (7.8.0)\n",
+      "Requirement already satisfied: urllib3>=1.21.1 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from elasticsearch) (1.25.8)\n",
+      "Requirement already satisfied: certifi in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from elasticsearch) (2020.4.5.2)\n",
+      "Requirement already satisfied: elasticsearch_dsl in /home/ubuntu/anaconda3/lib/python3.7/site-packages (7.2.1)\n",
+      "Requirement already satisfied: six in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from elasticsearch_dsl) (1.14.0)\n",
+      "Requirement already satisfied: python-dateutil in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from elasticsearch_dsl) (2.8.1)\n",
+      "Requirement already satisfied: elasticsearch<8.0.0,>=7.0.0 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from elasticsearch_dsl) (7.8.0)\n",
+      "Requirement already satisfied: certifi in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from elasticsearch<8.0.0,>=7.0.0->elasticsearch_dsl) (2020.4.5.2)\n",
+      "Requirement already satisfied: urllib3>=1.21.1 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from elasticsearch<8.0.0,>=7.0.0->elasticsearch_dsl) (1.25.8)\n",
+      "Requirement already satisfied: pymed in /home/ubuntu/anaconda3/lib/python3.7/site-packages (0.8.9)\n",
+      "Requirement already satisfied: requests>=2.20.0 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from pymed) (2.23.0)\n",
+      "Requirement already satisfied: chardet<4,>=3.0.2 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from requests>=2.20.0->pymed) (3.0.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from requests>=2.20.0->pymed) (2020.4.5.2)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from requests>=2.20.0->pymed) (1.25.8)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from requests>=2.20.0->pymed) (2.9)\n",
+      "Requirement already satisfied: gensim in /home/ubuntu/anaconda3/lib/python3.7/site-packages (3.8.3)\n",
+      "Requirement already satisfied: numpy>=1.11.3 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from gensim) (1.18.1)\n",
+      "Requirement already satisfied: six>=1.5.0 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from gensim) (1.14.0)\n",
+      "Requirement already satisfied: smart-open>=1.8.1 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from gensim) (2.1.0)\n",
+      "Requirement already satisfied: scipy>=0.18.1 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from gensim) (1.4.1)\n",
+      "Requirement already satisfied: boto3 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from smart-open>=1.8.1->gensim) (1.14.5)\n",
+      "Requirement already satisfied: requests in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from smart-open>=1.8.1->gensim) (2.23.0)\n",
+      "Requirement already satisfied: boto in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from smart-open>=1.8.1->gensim) (2.49.0)\n",
+      "Requirement already satisfied: s3transfer<0.4.0,>=0.3.0 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from boto3->smart-open>=1.8.1->gensim) (0.3.3)\n",
+      "Requirement already satisfied: jmespath<1.0.0,>=0.7.1 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from boto3->smart-open>=1.8.1->gensim) (0.9.4)\n",
+      "Requirement already satisfied: botocore<1.18.0,>=1.17.5 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from boto3->smart-open>=1.8.1->gensim) (1.17.5)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from requests->smart-open>=1.8.1->gensim) (1.25.8)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from requests->smart-open>=1.8.1->gensim) (2020.4.5.2)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from requests->smart-open>=1.8.1->gensim) (2.9)\n",
+      "Requirement already satisfied: chardet<4,>=3.0.2 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from requests->smart-open>=1.8.1->gensim) (3.0.4)\n",
+      "Requirement already satisfied: docutils<0.16,>=0.10 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from botocore<1.18.0,>=1.17.5->boto3->smart-open>=1.8.1->gensim) (0.15.2)\n",
+      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from botocore<1.18.0,>=1.17.5->boto3->smart-open>=1.8.1->gensim) (2.8.1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install elasticsearch\n",
+    "!pip install elasticsearch_dsl\n",
+    "!pip install pymed\n",
+    "!pip install gensim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "import py_4.get_all_features as get_all_features "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'/home/ubuntu/AYP/code/models/names_epochs_2_vectorSize_64_window_2.model' already exits. Using existing model to re-generate results.\n",
+      "'/home/ubuntu/AYP/code/models/co_authors_epochs_2_vectorSize_64_window_2.model' already exits. Using existing model to re-generate results.\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_vae = get_all_features.VAE_Features(df,scaling_flag = False)\n",
+    "df_vae = all_vae.get_all_features(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PCA(copy=True, iterated_power='auto', n_components=None, random_state=None,\n",
+       "    svd_solver='full', tol=0.0, whiten=False)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca = PCA(svd_solver=\"full\")\n",
+    "pca.fit(df_vae)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.37983765, 0.48995626, 0.59405068, 0.62288018, 0.65003928,\n",
+       "       0.67289672, 0.69365085, 0.71101349, 0.72721946, 0.74173353,\n",
+       "       0.75494682, 0.76699409, 0.77775495, 0.78793677, 0.7975609 ,\n",
+       "       0.80672229, 0.81553408, 0.82407882, 0.83175074, 0.83904562,\n",
+       "       0.84588606, 0.85254398, 0.85882884, 0.86491698, 0.87087089,\n",
+       "       0.87640193, 0.88178973, 0.88690857, 0.89196788, 0.89690508,\n",
+       "       0.90174388, 0.90646164, 0.91095689, 0.91536777, 0.91962201,\n",
+       "       0.9237989 , 0.92779576, 0.93164693, 0.93545054, 0.93910773,\n",
+       "       0.94268365, 0.9461441 , 0.94954459, 0.95279685, 0.95587734,\n",
+       "       0.95890598, 0.96187327, 0.96470707, 0.96746228, 0.97010094,\n",
+       "       0.97271243, 0.97530585, 0.97779587, 0.98017963, 0.98248734,\n",
+       "       0.98469739, 0.98687203, 0.98893613, 0.99094239, 0.99290998,\n",
+       "       0.99480609, 0.99662516, 0.99837895, 1.        ])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.cumsum(pca.explained_variance_ratio_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
