Data Visualization for Slides

--- a/code/0_Data_Exploration.ipynb
+++ b/code/0_Data_Exploration.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "'/home/ubuntu/AYP/data/labeled_data/enriched_labeled_dataset_large.json'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -133,10 +133,87 @@
     "    ps = sim_matrix_3.load_dataset(\"enriched_labeled_dataset_large\")\n",
     "    df = ps.get_dataset()\n",
     "\n",
-    "df.drop(columns=[\"last_author_country\"],inplace=True)\n",
-    "df.rename(columns={'ORG_STATE':'last_author_country'},inplace=True)\n",
+    "# df.drop(columns=[\"last_author_country\"],inplace=True)\n",
+    "# df.rename(columns={'ORG_STATE':'last_author_country'},inplace=True)\n",
     "\n",
     "print(\"FILE PULLED\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Getting plot of distribution of NIH papers by their country"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import pi\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "from bokeh.io import output_file, show\n",
+    "from bokeh.palettes import Category20c\n",
+    "from bokeh.plotting import figure\n",
+    "from bokeh.transform import cumsum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = df['last_author_country'].value_counts().reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = {a:int(b) for a,b in x.to_numpy()[:20,]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file(\"./code/img/Data_Exploration_Graphs/pie_percountry_NIH.html\")\n",
+    "\n",
+    "data = pd.Series(x).reset_index(name='value').rename(columns={'index':'country'})\n",
+    "data['angle'] = data['value']/data['value'].sum() * 2*pi\n",
+    "data['color'] = Category20c[len(x)]\n",
+    "\n",
+    "p = figure(plot_height=350, title=\"Distribution of Publication by Country - NIH\", toolbar_location=None,\n",
+    "           tools=\"hover\", tooltips=\"@country: @value\", x_range=(-0.5, 1.0), )\n",
+    "\n",
+    "p.wedge(x=0, y=1, radius=0.4,\n",
+    "        start_angle=cumsum('angle', include_zero=True), end_angle=cumsum('angle'),\n",
+    "        line_color=\"white\", fill_color='color', legend_field='country', source=data)\n",
+    "\n",
+    "p.axis.axis_label=None\n",
+    "p.axis.visible=False\n",
+    "p.grid.grid_line_color = None\n",
+    "\n",
+    "show(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(columns=[\"last_author_country\"],inplace=True)\n",
+    "df.rename(columns={'ORG_STATE':'last_author_country'},inplace=True)"
    ]
   },
   {
@@ -174,172 +251,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Perc of DA</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th># of DA</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.69107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.132743</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.0522928</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0.0329847</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0.0241352</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0.0160901</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>0.00965406</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>0.0112631</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>0.00724055</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>0.00241352</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>0.00321802</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>0.00160901</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>0.00321802</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>0.00160901</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>0.000804505</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>0.00160901</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>0.000804505</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>0.00160901</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>0.000804505</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>0.00160901</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>0.000804505</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>0.000804505</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>0.000804505</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>0.000804505</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          Perc of DA\n",
-       "# of DA             \n",
-       "2            0.69107\n",
-       "3           0.132743\n",
-       "4          0.0522928\n",
-       "5          0.0329847\n",
-       "6          0.0241352\n",
-       "7          0.0160901\n",
-       "8         0.00965406\n",
-       "9          0.0112631\n",
-       "10        0.00724055\n",
-       "11        0.00241352\n",
-       "12        0.00321802\n",
-       "13        0.00160901\n",
-       "14        0.00321802\n",
-       "15        0.00160901\n",
-       "16       0.000804505\n",
-       "17        0.00160901\n",
-       "18       0.000804505\n",
-       "20        0.00160901\n",
-       "21       0.000804505\n",
-       "22        0.00160901\n",
-       "24       0.000804505\n",
-       "25       0.000804505\n",
-       "26       0.000804505\n",
-       "30       0.000804505"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "da_num = df.groupby('last_author_name')[['PI_IDS']].nunique().values.flatten()\n",
     "da_options, da_freq = np.unique(da_num[da_num > 1],return_counts=True)\n",
